--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,14 @@ semi-dark: '#80BDC6'
 dark: '#0A95A8'
 */
 
+/*
+purple: #8127BA
+pink: #C0467B
+grey: #717CB9
+blue: #368497
+
+*/
+
 * {
   margin: 0;
   padding: 0;
